# Sunset

./: AGENTS.md  pyproject.toml  sky.py  skycolor_locator  spec.md  tasks.md
.github/workflows/: ci.yml
docs/: spec.md
scripts/: demo_local_search.py  train_residual_ridge.py
src/skycolor_locator/: __init__.py  __main__.py  contracts.py
src/skycolor_locator/api/: __init__.py  app.py
src/skycolor_locator/astro/: __init__.py  solar.py
src/skycolor_locator/geo/: __init__.py  tiling.py
src/skycolor_locator/index/: __init__.py  base.py  bruteforce.py  metrics.py  store.py
src/skycolor_locator/ingest/: __init__.py  cache.py  factory.py  gee_batch_pipeline.py  gee_client.py  gee_cloud_s5p.py  gee_providers.py  horizon_gee.py  interfaces.py  mock_providers.py  periodic_precomputed_provider.py  precomputed_providers.py  s2_periodic.py  surface_enrichment.py  (+1 more)
tests/: test_analytic_sky.py  test_api.py  test_api_perceptual_search.py  test_bruteforce_emd_modes.py  test_bucketing.py  test_contracts.py  test_contracts_periodic.py  test_earthstate_ingest.py  test_earthstate_resolver.py  test_earthstate_store.py  test_fov_signature.py  test_ground_palette_override.py  test_horizon_signature.py  test_index_bruteforce.py  test_ingest_integration.py  test_metrics_circular_emd.py  test_ml_features_ordering.py  test_orchestrate_batch.py  test_perceptual_embedding.py  test_periodic_constants_provider_smoke.py  test_periodic_precomputed_provider.py  test_precomputed_providers.py  test_residual_apply.py  test_s2_periodic_smoke.py  test_signature_core.py  test_smoke.py  test_solar.py  test_surface_resolver.py  test_terrain_horizon.py  test_tiling.py
(+23 files in other folders)
